--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             </tbody>
         </table>
-        <h2>Total Monthly: <span id="monthly-cost"></span></h2>
+        <h2>Total Monthly: <span id="monthly-cost">$</span></h2>
     </div>
 </body>
 
