--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <th class="th">Last Name</th>
                     <th class="th">ID</th>
                     <th class="th">Title</th>
-                    <th class="th">Annual Salary</th>
+                    <th class=".annual-salary">Annual Salary</th>
+                    <th class="th"></th>
                 </tr>
             </thead>
             <tbody class="tbody">
