--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             </tbody>
         </table>
-        <h2>Total Monthly: <span id="monthly-cost">$</span></h2>
+        <h2>Total Monthly: <span id="monthly-cost">$0.0</span></h2>
     </div>
 </body>
 
