bootstrap - buttons and table

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <h1>Salary Calculator</h1>
+        <div class="jumbotron">
+            <h1>Salary Calculator</h1>
+        </div>
     </header>
     <h2>Add Employee</h2>
     <div class="inputs">
@@ -25,11 +27,11 @@
         <input id="annual-salary" type="number" placeholder="Salary">
     </div>
     <div class="submit">
-        <button id="submit-button">Submit</button>
+        <button class="btn btn-primary" type="submit" id="submit-button">Submit</button>
     </div>
     <h2>Employees</h2>
     <div class="table-div">
-        <table class="table">
+        <table class="table table-hover table-striped ">
             <thead class="thead">
                 <tr class="tr">
                     <th class="th">First Name</th>
