added bootstrap alerts

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </div>
     </header>
     <h2>Add Employee</h2>
+    <div id="myAlert" class="alert-storage">
+    </div>
     <div class="inputs">
         <input id="first-name" type="text" placeholder="First Name">
         <input id="last-name" type="text" placeholder="Last Name">
