background color changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="client.js"></script>
 </head>
 
-<body class="container">
+<body>
+<section class="container rounded">
     <header class="container">
         <div class="jumbotron">
             <h1>Salary Calculator</h1>
@@ -52,6 +53,7 @@
         <h3 class="monthly-total">Total Monthly: <span id="monthly-cost"></span></h2>
     </div>
     </main>
+    </section>
 </body>
 
 </html>
