--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
     <div class="input-group mb-3">
         <input class="input-style" id="first-name" type="text" placeholder="First Name">
         <input class="input-style" id="last-name" type="text" placeholder="Last Name">
+    </div>
+    <div class="input-group mb-3">
         <input class="input-style" id="id-number" type="number" placeholder="ID">
         <input class="input-style" id="title" type="text" placeholder="Title">
+    </div>
+    <div class="input-group mb-3">
         <input class="input-style" id="annual-salary" type="number" placeholder="Salary">
     </div>
     <div class="submit">
